{
    "name": "New Controls",
    "maps": [
        {
            "name": "CharacterContol",
            "id": "ae1bbc74-ddd4-4c04-adf0-5e2633b0131f",
            "actions": [
                {
                    "name": "Move",
                    "type": "Value",
                    "id": "d0639c87-74f1-498a-80a9-959404c8e12c",
                    "expectedControlType": "Vector2",
                    "processors": "NormalizeVector2",
                    "interactions": ""
                },
                {
                    "name": "Run",
                    "type": "Button",
                    "id": "342ee9c3-4f16-4be7-88f3-f8c0e394afca",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Jump",
                    "type": "Button",
                    "id": "48ec3212-fb18-42e2-b600-d3c264bf0f34",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Look",
                    "type": "Value",
                    "id": "fabc1900-41bf-4fbd-bd45-a9ab7de92ff1",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "42ff8c24-3485-4ff3-89a2-745c89c01adf",
                    "path": "<Gamepad>/leftStick",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "2D Vector",
                    "id": "0d35c6be-f58f-47d6-bd86-6f9baa28c279",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "22818310-e9d9-4cb8-9700-489a5ec6b4a8",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "f39dcf87-de04-41bc-b594-41c357c89219",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "19ab5d3b-b166-42d9-94ff-376ba87c69be",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "85e74dc5-054e-4b96-8b25-ee36cfa98eb5",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "de0c15ab-7469-447e-a696-41dd5cccc2f6",
                    "path": "<XInputController>/buttonWest",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Run",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "51a609f3-288c-46e8-b4c1-641755635483",
                    "path": "<Keyboard>/leftShift",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Run",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "e737f162-3dfe-4f24-b843-40fa66142b36",
                    "path": "<XInputController>/buttonSouth",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Jump",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "ca5baec7-10ff-4d5e-ac95-57516af88007",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Jump",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "8c3b1e2f-d323-4087-a4ff-4396113735c7",
                    "path": "<Mouse>/delta",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Look",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "9c99d0cd-6136-4b77-ae09-e551affff8de",
                    "path": "<Gamepad>/rightStick",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Look",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}